<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="419dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="312dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnLayExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLayExercise" />

        <Button
            android:id="@+id/btnButtonExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnButtonExercise" />

        <Button
            android:id="@+id/btnCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculator" />

        <Button
            android:id="@+id/btnTTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnTTT" />

        <Button
            android:id="@+id/btnMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMatch" />

        <Button
            android:id="@+id/btnPassInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPassInt" />

        <Button
            android:id="@+id/btnFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnFragment" />

        <Button
            android:id="@+id/btnMenus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMenus" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>